--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,7 @@ permalink: /:title
 
 # gems and other configs
 plugins: [jekyll-paginate, jekyll-feed]
+gems: -jekyll-sitemap
 
 feed:
   path: feed.xml
