--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,8 @@ permalink: /:title
 
 # gems and other configs
 plugins: [jekyll-paginate, jekyll-feed]
-gems: -jekyll-sitemap
+gems: 
+      -jekyll-sitemap
 
 feed:
   path: feed.xml
